2009-09-07  Alejandro G. Castro  <alex@igalia.com>

	* hildon/hildon-pannable-area.c,
	(hildon_pannable_area_class_init):
	Change the default value of the scrollbar_fade_delay.

	Fixes: NB#127018 (Panning indicator fades out too slowly)

2009-09-04  Claudio Saavedra  <csaavedra@igalia.com>

	[2.2.0 Release Candidate 1]

	* NEWS: Updates
	* configure.ac: Bump version
	* debian/changelog: updates

2009-09-04  Alejandro G. Castro  <alex@igalia.com>

	* hildon/hildon-pannable-area.c,
	(hildon_pannable_area_init),
	(hildon_pannable_area_button_press_cb),
	(hildon_pannable_area_button_release_cb): Added a new acceleration
	system to help traversing big lists, tuned the stop threshold.

	Fixes: NB#132584 (Pannable kinetics in large lists needs tuning)

2009-09-04  Alberto Garcia  <agarcia@igalia.com>

	* hildon/hildon-window.h:
	Document and deprecate HILDON_WINDOW_LONG_PRESS_TIME

	Fixes: MB#4580 (HILDON_WINDOW_LONG_PRESS_TIME is undocumented)

2009-09-04  Claudio Saavedra  <csaavedra@igalia.com>

	[Release 2.1.97]

	* configure.ac: bump version
	* NEWS: updates
	* debian/changelog: updates

2009-09-04  Alberto Garcia  <agarcia@igalia.com>

	* hildon/hildon-entry.c
	* hildon/hildon-text-view.c:
	Documentation updates

2009-09-04  Alberto Garcia  <agarcia@igalia.com>

	* hildon/hildon-app-menu.c (hildon_app_menu_repack_items):
	Redraw menu when the number of items change.

	Fixes: NB#131911 (Appmenu does not resize properly, when number of
	menu items change)

2009-09-03  Claudio Saavedra  <csaavedra@igalia.com>

	* hildon/hildon-pannable-area.c:
	(hildon_pannable_area_launch_fade_timeout),
	(hildon_pannable_area_motion_event_scroll),
	(hildon_pannable_area_check_move),
	(hildon_pannable_area_button_release_cb),
	(hildon_pannable_area_scroll_to):

	Use a priority of G_PRIORITY_IDLE_HIGH + 20 for all the pannable
	area drawing operations, since this is the recommended for drawing
	operations.

	Fixes: NB#110894 (In event view containing very large description